[gd_scene load_steps=14 format=3 uid="uid://6l3q8jmqk1at"]

[ext_resource type="Texture2D" uid="uid://oiv0rvcxhyts" path="res://Scenes/OrderBoard/order_board_bg.png" id="1_gvbj5"]
[ext_resource type="Texture2D" uid="uid://dh21fvrsoxlun" path="res://Scenes/OrderBoard/order_paper_sprite_sheet_64x64.png" id="2_wxgpw"]
[ext_resource type="Script" path="res://Scenes/OrderBoard/order_board_interface.gd" id="2_xtje7"]
[ext_resource type="Script" path="res://Scenes/Common/button_change_area.gd" id="5_3xndl"]
[ext_resource type="Texture2D" uid="uid://c3wvid3wwqn3o" path="res://Scenes/OrderBoard/order_paper_1.png" id="5_ar4xl"]
[ext_resource type="Script" path="res://Scenes/OrderBoard/order_interface.gd" id="5_ce1bt"]
[ext_resource type="Texture2D" uid="uid://b76quywul7p7h" path="res://Scenes/OrderBoard/order_paper_2.png" id="7_7uqse"]
[ext_resource type="Texture2D" uid="uid://cqxhhu1fbk38w" path="res://Scenes/OrderBoard/order_paper_3.png" id="8_l2jid"]
[ext_resource type="Texture2D" uid="uid://dewf72m2lbfpw" path="res://Scenes/OrderBoard/order_paper_4.png" id="9_kajm3"]
[ext_resource type="Texture2D" uid="uid://dqhm8xt2fouj2" path="res://Scenes/OrderBoard/order_paper_5.png" id="10_twg4g"]
[ext_resource type="PackedScene" uid="uid://be4b7lb0lpee8" path="res://Scenes/OrderBoard/order_turn_in_interface.tscn" id="11_afwrl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u7gfl"]
resource_name = "Order Sprites"
texture = ExtResource("2_wxgpw")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
2:2/size_in_atlas = Vector2i(2, 2)
2:2/0 = 0
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
4:0/size_in_atlas = Vector2i(4, 4)
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_neia6"]
sources/0 = SubResource("TileSetAtlasSource_u7gfl")

[node name="OrderBoard" type="Node"]

[node name="OrderBoardArea" type="Node2D" parent="."]

[node name="OrderBoardBg" type="Sprite2D" parent="OrderBoardArea"]
texture_filter = 1
texture = ExtResource("1_gvbj5")
centered = false

[node name="TileMap" type="TileMap" parent="OrderBoardArea"]
visible = false
tile_set = SubResource("TileSet_neia6")
format = 2
layer_0/name = "Orders"

[node name="OrderBoardInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xtje7")

[node name="Buttons" type="Control" parent="OrderBoardInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonMerchantGuild" type="Button" parent="OrderBoardInterface/Buttons" groups=["area_change_buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = 147.0
offset_right = -236.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
text = "Return"
script = ExtResource("5_3xndl")

[node name="Orders" type="Control" parent="OrderBoardInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -124.0
offset_right = 153.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Order1" type="VBoxContainer" parent="OrderBoardInterface/Orders"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 84.0
offset_bottom = 102.0
script = ExtResource("5_ce1bt")

[node name="TextureRect" type="TextureRect" parent="OrderBoardInterface/Orders/Order1"]
layout_mode = 2
texture = ExtResource("5_ar4xl")

[node name="Button" type="Button" parent="OrderBoardInterface/Orders/Order1"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "View"

[node name="Order2" type="VBoxContainer" parent="OrderBoardInterface/Orders"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_top = 20.0
offset_right = 21.0
offset_bottom = 114.0
grow_horizontal = 2
script = ExtResource("5_ce1bt")

[node name="TextureRect" type="TextureRect" parent="OrderBoardInterface/Orders/Order2"]
layout_mode = 2
texture = ExtResource("7_7uqse")

[node name="Button" type="Button" parent="OrderBoardInterface/Orders/Order2"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "View"

[node name="Order3" type="VBoxContainer" parent="OrderBoardInterface/Orders"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -104.0
offset_right = 80.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("5_ce1bt")

[node name="TextureRect" type="TextureRect" parent="OrderBoardInterface/Orders/Order3"]
layout_mode = 2
texture = ExtResource("8_l2jid")

[node name="Button" type="Button" parent="OrderBoardInterface/Orders/Order3"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "View"

[node name="Order4" type="VBoxContainer" parent="OrderBoardInterface/Orders"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -94.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_ce1bt")

[node name="TextureRect" type="TextureRect" parent="OrderBoardInterface/Orders/Order4"]
layout_mode = 2
texture = ExtResource("9_kajm3")

[node name="Button" type="Button" parent="OrderBoardInterface/Orders/Order4"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "View"

[node name="Order5" type="VBoxContainer" parent="OrderBoardInterface/Orders"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -79.0
offset_bottom = 79.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("5_ce1bt")

[node name="TextureRect" type="TextureRect" parent="OrderBoardInterface/Orders/Order5"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("10_twg4g")

[node name="Button" type="Button" parent="OrderBoardInterface/Orders/Order5"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "View"

[node name="OrderTurnInInterface" parent="OrderBoardInterface" instance=ExtResource("11_afwrl")]
visible = false
layout_mode = 1

[connection signal="pressed" from="OrderBoardInterface/Buttons/ButtonMerchantGuild" to="OrderBoardInterface/Buttons/ButtonMerchantGuild" method="_on_pressed" binds= ["Merchant Guild"]]
[connection signal="order_completed" from="OrderBoardInterface/OrderTurnInInterface" to="OrderBoardInterface" method="on_order_completed"]
